--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Taskeep - Keep Your Task</title>
+    <title>Trackeep - Keep Your Task</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
       <div class="todo-app">
-        <h2>Welcome to Trackeep! <img src="images/icon.png" /></h2>
+        <h2>Welcome to Trackeep! <img src="icon.png" /></h2>
         <div class="row">
           <input type="text" id="input-box" placeholder="Add your task" />
           <button onclick="addTask()">Add</button>
